# query-curve

./: .gitignore  .prettierrc  package-lock.json  package.json  tsconfig.json
repositories/builder/: README.md  build.js  package.json
repositories/builder/src/: @common  index.ts
repositories/builder/tests/: bezierCurve.test.ts  getOffsetAndScaleFromRange.test.ts
repositories/common/: .gitignore  package.json  tsconfig.json
repositories/common/src/: package.json
repositories/common/src/types/: index.ts
repositories/extensions/googleSheets/: .gitignore  build.js  globals.d.ts  package-lock.json  package.json  tsconfig.json
repositories/extensions/googleSheets/src/: index.ts
repositories/extensions/googleSheets/usable/: index.js
repositories/extensions/microsoftExcel/: manifest.xml  package-lock.json  package.json
repositories/query/: LICENSE  README.md  jest.config.js  package.json
repositories/query/python/: .gitignore  README.md  pyproject.toml  setup.py
repositories/query/python/src/query_curve/: __init__.py  query_curve.py
repositories/query/python/src/query_curve/utils/: decode.py  from_base_62.py
repositories/query/python/tests/: test_query_curve.py
repositories/query/src/: index.ts
repositories/query/tests/: queryCurve.test.ts
repositories/query/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
repositories/ui/react/: .gitignore  README.md  build.js  package-lock.json  package.json  tsconfig.json
src/: index.ts  types.ts
src/utils/: asEnum.ts  objectKeys.ts  objectValues.ts
(+25 files in other folders)
